# Brief-5-RFM-Segmentation-LRZ

./: .gitignore  Dockerfile  Dockerfile.airflow  README.md  docker-compose.yaml  docker-compose.yml  init-db.sql  pyproject.toml  requirements.txt
config/: airflow.cfg
dags/: bonjour_dag.py  dag_rfm.py  dag_rfm_taskgroup.py  rfm_pipeline.py  rfm_pipeline_soda.py
dags/rfm_dags_assets/: dag_clean_rfm.py  dag_compute_rfm.py  dag_compute_rfm_history.py  dag_create_views.py  dag_ingest.py  dag_load_segments.py
dashboard/: Dockerfile  app.py  charts.py  queries.py
dashboard/static/css/: custom.css
dashboard/templates/: _kpi_bar.html  _table_segments.html  about.html  analysis.html  base.html  cohorts.html  dashboard.html  glossary.html  movements.html  overview.html  presentation.html  presentation_base.html  presentation_v3.html  presentation_ve.html  sankey.html
docs/: airflow.md  convert_xlsx_to_csv.py  data_quality_audit.md
etl/: 00_functions.sql  02_clean.sql  03_rfm.sql  04_segments.sql  05_view_rfm_v.sql  06_history.sql  bonjour.py  config.py  ingest.py
notebooks/: EDA.ipynb  EDA.md
soda/: configuration.yaml
soda/checks/: analytics_customer_rfm.yaml  analytics_customer_rfm.yml  clean_sales.yaml  raw_online_retail.yaml  raw_online_retail.yml
